Added buildpath for Arm GNU Toolchain to compile arm assembly for testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ option(ARM_VENDORED "Use vendored libraries" OFF)
 set(OUTPUT_DIR "arm7tdmi-tests-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${CMAKE_BUILD_TYPE}")
 string(TOLOWER "${OUTPUT_DIR}" OUTPUT_DIR)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/${OUTPUT_DIR}/")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/${OUTPUT_DIR}")
 
 FetchContent_Declare(
         catch
@@ -24,8 +24,43 @@ include(Catch)
 
 add_executable(tests
         test_decode_arm_instructions.cpp
-        test_decode_thumb_instructions.cpp)
+        test_decode_thumb_instructions.cpp
+        test_util.h
+        test_util.h)
 
 target_link_libraries(tests PRIVATE arm7tdmi Catch2::Catch2WithMain fmt::fmt)
 
 catch_discover_tests(tests)
+
+SET(ARM_ASSEMBLER_PATH "" CACHE PATH "Arm GNU Toolchain path (arm-none-eabi)")
+message(STATUS  "Using ARM assembler in: ${ARM_ASSEMBLER_PATH}")
+
+if (DEFINED CACHE{ARM_ASSEMBLER_PATH})
+    add_compile_definitions(-DTEST_COMPILED_ASSEMBLY)
+    file(GLOB_RECURSE ASSEMBLY_SOURCE CONFIGURE_DEPENDS *.s)
+
+    add_custom_target(make-asm-output-dir ALL
+            COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assembly")
+
+    foreach(item IN LISTS ASSEMBLY_SOURCE)
+        get_filename_component(item_file_name ${item} NAME)
+        set(ASM_IM "${CMAKE_CURRENT_BINARY_DIR}/${item_file_name}.o")
+        set(ASM_OUT "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assembly/${item_file_name}.bin")
+        add_custom_command(
+                OUTPUT "${ASM_OUT}"
+                COMMAND ${ARM_ASSEMBLER_PATH}/as.exe ${item} -march=armv4t -o ${ASM_IM} && ${ARM_ASSEMBLER_PATH}/ld.exe ${ASM_IM} -o ${ASM_OUT}
+                DEPENDS "${item}"
+        )
+        list(APPEND ASSEMBLY_BINARY_FILES ${ASM_OUT})
+    endforeach()
+
+    add_custom_target(
+            assembly
+            DEPENDS ${ASSEMBLY_BINARY_FILES}
+    )
+
+    add_dependencies(tests assembly)
+else()
+endif()
+
+
