Fixed cmake cache path for absolute on windows

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,9 +34,9 @@ target_link_libraries(tests PRIVATE arm7tdmi Catch2::Catch2WithMain fmt::fmt)
 
 catch_discover_tests(tests)
 
-set(ARM_ASSEMBLER_PATH "" PATH "Arm GNU Toolchain path (arm-none-eabi)")
+set(ARM_ASSEMBLER_PATH "" CACHE PATH "Arm GNU Toolchain path (arm-none-eabi)")
 
-if (IS_DIRECTORY(ARM_ASSEMBLER_PATH))
+if (IS_DIRECTORY "${ARM_ASSEMBLER_PATH}")
     message(STATUS  "Using ARM assembler in: ${ARM_ASSEMBLER_PATH}")
 
     add_compile_definitions(-DTEST_COMPILED_ASSEMBLY)
