--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ add_library(arm7tdmi STATIC
         include/arm7tdmi/cpu.h
         src/cpu.cpp
         include/arm7tdmi/register.h
+        include/arm7tdmi/memory_interface.h
+        src/memory_interface.cpp
 )
 
 include_directories(include)
