Working on memory interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(arm7tdmi STATIC
         include/arm7tdmi/register.h
         include/arm7tdmi/memory_interface.h
         src/memory_interface.cpp
+        src/types.cpp
 )
 
 include_directories(include)
