Fixed memory api, added all 37 registers, changed api to allow for access depending on mode, started on block data transfer implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library(arm7tdmi STATIC
         src/memory.cpp
         src/types.cpp
         include/arm7tdmi/common.h
+        src/register.cpp
 )
 
 include_directories(include)
